--- a/config.json
+++ b/config.json
@@ -19,13 +19,13 @@
       "action": "warn"
     },
     "Cube/ValidInputs": {
-      "action": "ignore"
+      "action": "warn"
     },
     "Cube/ValidOutputs": {
-      "action": "ignore"
+      "action": "warn"
     },
     "Cube/ValidOp": {
-      "action": "ignore"
+      "action": "warn"
     },
     "Items/ValidSockets": {
       "action": "warn"
