--- a/data/hd/global/excel/controllerskillsettings.json
+++ b/data/hd/global/excel/controllerskillsettings.json
@@ -4878,9 +4878,9 @@
             "type": "ControllerSkillsData",
             "name": "Poison_Explosion",
             "id": 83,
-            "usageType": 3,
-            "targetGroup": 1,
-            "defaultTargetDistance": 10.0,
+            "usageType": 0,
+            "targetGroup": 0,
+            "defaultTargetDistance": 2.0,
             "acceptableDistanceOffset": 6.0,
             "useSkillScaledValueAsDefaultDist": false,
             "skillLevelLimitsScaledValueAsDefault": -1,
@@ -4898,7 +4898,17 @@
             "holdRumbleDelayMS": 600,
             "skillQueueDeadzoneMS": 160,
             "validationFlags": 0,
-            "SkillUseRumble": {},
+            "SkillUseRumble": {
+                "type": "ControllerRumbleData",
+                "name": "Multiple_Shot_SkillUseRumble",
+                "hdVibrationFile": "",
+                "length": 0.05,
+                "decayLength": 0.0,
+                "lowFrequencyPriority": 0,
+                "lowFrequencyIntensity": 0.0,
+                "highFrequencyPriority": 0,
+                "highFrequencyIntensity": 0.0
+            },
             "SkillSpecial1Rumble": {},
             "TriggerParams": {}
         },
