--- a/data/hd/global/excel/controllerskillsettings.json
+++ b/data/hd/global/excel/controllerskillsettings.json
@@ -2622,10 +2622,10 @@
         },
         {
             "type": "ControllerSkillsData",
-            "name": "Grim_Ward",
+            "name": "Madawcs_Fury",
             "id": 150,
-            "usageType": 3,
-            "targetGroup": 1,
+            "usageType": 0,
+            "targetGroup": 0,
             "defaultTargetDistance": 2.0,
             "acceptableDistanceOffset": 6.0,
             "useSkillScaledValueAsDefaultDist": false,
